# ivc

./: .gitignore  CHALLENGE.md  Dockerfile  Jenkinsfile  README.md  pyproject.toml  pytest-report.html  pytest-report.xml  setup-github-runner.sh  trigger-pipeline.txt
.github/workflows/: ci-cd.yaml
ansible/: README.md  ansible.cfg
ansible/inventory/: k8s-cluster.yml
ansible/playbooks/: deploy-registry-certificates.yml
ansible/playbooks/templates/: containerd-hosts.toml.j2  deployment-report.md.j2
app/: main.py  pytest-report.html  pytest-report.xml  requirements.txt  test_main.py
app/templates/: error.html  index.html
docker/registry/: docker-compose.yml
docs/: API-DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT-GUIDE.md  SECURITY-GUIDE.md
helm/crypto-rates/: Chart.yaml  values.yaml
helm/crypto-rates/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  service.yaml
kubernetes/manifests/: registry-secret.yaml
scripts/: 01-setup-secure-docker-registry.sh  02-build-crypto-rates-application.sh  03-test-local-docker.sh  04-distribute-registry-certificates.sh  05-deploy-crypto-rates-to-k8s.sh  setup-dev.sh
terraform/: helm.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
